--- a/LibraryWeb/Views/Shared/_Layout.cshtml
+++ b/LibraryWeb/Views/Shared/_Layout.cshtml
@@ -21,8 +21,8 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("View Readers", "Index", "Home")</li>
+                    <li>@Html.ActionLink("Books", "Index", "Home")</li>
+                    <li>@Html.ActionLink("Readers", "Index", "Readers")</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
