--- a/LibraryWeb/Views/Books/_Books.cshtml
+++ b/LibraryWeb/Views/Books/_Books.cshtml
@@ -28,7 +28,7 @@
                     @Html.DisplayFor(modelItem => item.TotalQuantity)
                 </td>
                 <td>
-                    @Html.DisplayFor(modelItem => item.AvailableQuantity)
+                    @Html.DisplayFor(modelItem => item.Status)
                 </td>
                 <td>
                     @{ string authorNames = item.Authors == null ? "-" : String.Join(", ", item.Authors.Select(a => a.FullName).ToArray());}
@@ -38,6 +38,7 @@
                     @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
                     @Html.ActionLink("Details", "Details", new { id = item.Id }) |
                     @Html.ActionLink("Delete", "Delete", new { id = item.Id }) |
+                    @Html.ActionLink("Show History", "History", new { id = item.Id }) |
                     @Html.ActionLink("Take", "Take", new { id = item.Id }) |
                 </td>
             </tr>
