--- a/LibraryWeb/Views/Books/History.cshtml
+++ b/LibraryWeb/Views/Books/History.cshtml
@@ -37,22 +37,31 @@
 
 <div>
     <h4>Book has been taken by following readers</h4>
-    <table class="table">
-        <tr>
-            <th>Reader</th>
-            <th>Taken at</th>
-            <th>Returned at</th>
-        </tr>
-        @foreach (var item in Model.History)
+    @{
+        if (Model.History == null)
         {
-            <tr>
-                <td>@Html.ActionLink(item.Reader.FullName, "Details", "Readers", new { id = item.Reader.Id }, null)</td>
-                <td>@item.DateTaken</td>
-                @{ var date = item.DateReturned.HasValue ? item.DateReturned.ToString() : "-"; }
-                <td>@date</td>
-            </tr>
+            <h3>Book '@(Model.Title)' has never been taken.</h3>
         }
-    </table>
+        else
+        {
+            <table class="table">
+                <tr>
+                    <th>Reader</th>
+                    <th>Taken at</th>
+                    <th>Returned at</th>
+                </tr>
+                @foreach (var item in Model.History)
+                {
+                    <tr>
+                        <td>@Html.ActionLink(item.Reader.FullName, "Details", "Readers", new { id = item.Reader.Id }, null)</td>
+                        <td>@item.DateTaken</td>
+                        @{ var date = item.DateReturned.HasValue ? item.DateReturned.ToString() : "-"; }
+                        <td>@date</td>
+                    </tr>
+                            }
+            </table>
+                            }
+    }
 </div>
 <p>
     @Html.ActionLink("Back to List", "Index")
