--- a/LibraryWeb/Views/Books/Index.cshtml
+++ b/LibraryWeb/Views/Books/Index.cshtml
@@ -7,6 +7,15 @@
 }
 
 <h2>Index</h2>
+@Html.ValidationMessage("", new { @class = "text-danger" })
+@{
+    if (ViewBag.EmailMessage != "")
+    {
+        <div class="alert success">
+            <strong>@(ViewBag.EmailMessage)</strong>
+        </div>
+    }
+}
 
 <p>
     <div class="col-sm-2"> 
