--- a/LibraryWeb/Views/Readers/Details.cshtml
+++ b/LibraryWeb/Views/Readers/Details.cshtml
@@ -38,6 +38,7 @@
                         <th>Book</th>
                         <th>Taken at</th>
                         <th>Returned at</th>
+                        <th></th>
                     </tr>
                     @foreach (var item in Model.History)
                     {
@@ -46,6 +47,13 @@
                             <td>@item.DateTaken</td>
                             @{ var date = item.DateReturned.HasValue ? item.DateReturned.ToString() : "-";}
                             <td>@date</td>
+                            <td>
+                                @{if (!item.DateReturned.HasValue)
+                                    {
+                                        @Html.ActionLink("Return", "Return", new { id = item.Id })
+                                    }
+                                }
+                            </td>
                         </tr>
                                 }
                 </table>
