--- a/LibraryWeb/Views/Shared/_Layout.cshtml
+++ b/LibraryWeb/Views/Shared/_Layout.cshtml
@@ -22,6 +22,7 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Books", "Index", "Home")</li>
+                    <li>@Html.ActionLink("Authors", "Index", "Authors")</li>
                     <li>@Html.ActionLink("Readers", "Index", "Readers")</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
